RV House change log

Version 0.92.0 (XX.XX.2011)
- Joining to races not limited by time anymore, due to Re-Volt 1.2 developments.

Version 0.91.8 (13.03.2011)
- By default write log to STDERR because some people experience log files growing indefinitely.

Version 0.91.7 (06.06.2009)
- Updated to use rvzt.zachattackgames.com as login server

Version 0.91.6 (01.05.2009)
- Crashing problem when trying to login when server down fixed

Version 0.91.5 (08.04.2009)
- IP server changed to working one

Version 0.91.4 (01.03.2009)
- Ignoring user informs that the ignore is temporary
- Host sends his IP to every user that join (can be turned off)
- Possibility to block permanently users with configuration file

Version 0.91.3 (20.04.2008) 
- Logging in problems fixed: using revoltrace.com for user authentication

Version 0.91.2 (15.02.2008) 
- RV House new versions update location changed

Version 0.91.1 (12.01.2008) 
- More fixes to the UDP layer
- RvR links

Version 0.91.0 (06.01.2008) 
- Bug fix release
- Log file size should not run out of bounds any more
- If centralized server has problems should not crash RV House
- The UDP layer updated to handle better variable send timeouts

Version 0.91.3 (18.04.2008)
- Authentication server configurable in rvhouse.conf

Version 0.90.8 (11.02.2007)
- Competitions menu has links to new online competition (Re-Volt Race)
- About dialog includes new links: RRR forum and Re-Volt Race
- Improvements to global ignore list

Version 0.90.1 (28.01.2007)
- P2P connection node timeout more practical 30 seconds

Version 0.90.0 (28.01.2007)
- Global ignore list to help ignoring trouble makers
- Time user has been in chatting status shown
- P2P connection node timeout bug fixed

Version 0.89.2 (31.12.2006)
- Flood control on private and room windows
- External IP detection fixed to use better site
- Status of external IP detection logged

Version 0.89.1 (19.12.2006)
- Help message shown again if could not connect to P2P
