@@ -1,4 +1,5 @@
 #include <utility>
+#include <string>
 
 #include <fx.h>
 #include <fxkeys.h>
@@ -34,11 +35,17 @@ namespace {
         true,
         true
     };
+
+    const char *autoset_cmdline_pref_key = "autoset_cmdline";
+    bool autoset_cmdline_default = true;
+    const char *cmdline_pref_key = "cmdline";
 }
 
 FXDEFMAP(settings) settings_map[]= {
   FXMAPFUNC(SEL_COMMAND,  settings::ID_OK,
                           settings::on_ok),
+  FXMAPFUNC(SEL_COMMAND,  settings::ID_AUTOSET_CMDLINE_TOGGLE,
+                          settings::on_autoset_cmdline_toggled),
 };
 
 // FXIMPLEMENT(settings, settings::super, settings_map, ARRAYNUMBER(settings_map))
@@ -133,6 +140,22 @@ settings::on_ok(FXObject *from, FXSelector sel, void *ptr) {
     return this->handle(from, FXSEL(FXSELTYPE(sel), ID_CLOSE), ptr);
 }
 
+long
+settings::on_autoset_cmdline_toggled(FXObject *from, FXSelector sel, void *ptr) {
+    ACE_DEBUG((LM_DEBUG, "settings: on_autoset_cmdline_toggled\n"));
+    _set_cmdline_field_state();
+    return 0;
+}
+
+void
+settings::_set_cmdline_field_state() {
+    if (_autoset_cmdline_check->getCheck()) {
+        _cmdline_field->disable();
+    } else {
+        _cmdline_field->enable();
+    }
+}
+
 void
 settings::create() {
     ACE_DEBUG((LM_DEBUG, "settings::create this %d\n", this));
@@ -163,8 +186,6 @@ settings::_setup() {
     FXMatrix          *matrix=NULL;
     FXLabel           *label=NULL;
     FXColorWell       *colorwell=NULL;
-    FXSpinner         *spinner=NULL;
-    FXCheckButton     *check=NULL;
 
     FXVerticalFrame *vmain = new FXVerticalFrame(
         this,
@@ -222,6 +243,13 @@ settings::_setup() {
     new FXButton(
         vframe,langstr("settings_win/colors_tab"),NULL,switcher,
         FXSwitcher::ID_OPEN_SECOND,
+        FRAME_RAISED|ICON_ABOVE_TEXT|LAYOUT_FILL
+    );
+
+    vframe = new FXVerticalFrame(buttonframe,FRAME_SUNKEN,0,0,0,0,0,0,0,0);
+    new FXButton(
+        vframe,langstr("settings_win/advanced_tab"),NULL,switcher,
+        FXSwitcher::ID_OPEN_THIRD,
         FRAME_RAISED|ICON_ABOVE_TEXT|LAYOUT_FILL
     );
 
@@ -380,7 +408,33 @@ settings::_setup() {
     new FXButton(listbuttonframe,"&Edit\tEdit Binding Name",NULL,this,ID_RENAME_FILEBINDING);
 #endif
 
+    /*****************************************
+     * Start of Advanced view
+     */
 
+    vframe = new FXVerticalFrame(
+        switcher,
+        LAYOUT_FILL_X|LAYOUT_FILL_Y,
+        0,0,0,0,0,0,0,0,0,0
+    );
+
+    _autoset_cmdline_check = new FXCheckButton(vframe, langstr("settings_win/autoset_cmdline"),
+                                               this, ID_AUTOSET_CMDLINE_TOGGLE);
+    new FXLabel(vframe, langstr("settings_win/cmdline"));
+    _cmdline_field         = new FXTextField(vframe, 25);
+
+    new FXSeparator(vframe,SEPARATOR_GROOVE|LAYOUT_FILL_X);
+
+//    for (size_t i = 0; i < array_sizeof(general_check_order); i++) {
+//        const char *key     = general_check_order[i];
+//        std::string langkey = "settings_win/";
+//        langkey += key;
+//        _check_map[key] = new FXCheckButton(vframe, langstr(langkey.c_str()));
+//    }
+
+    /**
+     * Start of footer (OK/Cancel)
+     */
     new FXSeparator(vmain,SEPARATOR_GROOVE|LAYOUT_FILL_X);
     FXHorizontalFrame *closebox=new FXHorizontalFrame(
         vmain,
@@ -403,6 +457,15 @@ settings::_pref_to_form() {
         bool        val = pref()->get<bool>("general", key, def_val);
         _check_map[key]->setCheck(val);
     }
+
+    _autoset_cmdline_check->setCheck(pref()->get<bool>("advanced", autoset_cmdline_pref_key, autoset_cmdline_default));
+    std::string cmdline = pref()->get("advanced", cmdline_pref_key);
+    _cmdline_field->setText(FXString(cmdline.c_str()));
+
+    _set_cmdline_field_state();
+
+    ACE_DEBUG((LM_DEBUG, "settings::_pref_to_form: cmdline %s\n", cmdline.c_str()));
+
 }
 
 void
@@ -412,6 +475,11 @@ settings::_form_to_pref() {
         bool        val = _check_map[key]->getCheck() ? true : false;
         pref()->set<bool>("general", key, val);
     }
+
+    pref()->set<bool>("advanced", autoset_cmdline_pref_key, _autoset_cmdline_check->getCheck());
+    pref()->set<std::string>("advanced", cmdline_pref_key, _cmdline_field->getText().text());
+
+    ACE_DEBUG((LM_DEBUG, "settings::_form_to_pref: cmdline %s\n", _cmdline_field->getText().text()));
 
     getApp()->setBaseColor(_base);
     getApp()->setBackColor(_back);
