@@ -2,6 +2,7 @@ RV House change log
 
 Version 0.92.0 (XX.XX.2011)
 - Joining to races not limited by time anymore, due to Re-Volt 1.2 developments.
+- Settings to specify command-line arguments used to launch Re-Volt.
 
 Version 0.91.8 (13.03.2011)
 - By default write log to STDERR because some people experience log files growing indefinitely.
